cmake_minimum_required(VERSION 3.20)
project(RPX-100)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
find_library(websockets websockets)
find_library(liquid liquid)
find_library(lime LimeSuite)
add_compile_options(-g)

file(GLOB SRC_FILES RPX-100.cpp SDRsamples.cpp WebSocketServer.cpp Util.cpp sockets/*.cpp)
add_executable(RPX-100 ${SRC_FILES})
target_link_libraries(RPX-100 PRIVATE Threads::Threads ${websockets} ${liquid} ${lime})
add_link_options(RPX-100 -lLimeSuite -lliquid -lwebsockets)